BB-75: Add new Endpoints to swagger-ui
