# swagger.json
@@ -15,7 +15,7 @@
    "/game/getLevel/{name}": {
      "get": {
        "tags":["game"],
-       "description": "get one level",
+       "description": "get one level with all events and cards",
        "consumes": [
          "application/x-www-form-urlencoded"
        ],
@@ -62,10 +62,10 @@
         "parameters": []
       }
     },
-    "/game/getEvent/{levelId}": {
+    "/game/getEvents/{levelId}": {
       "get": {
         "tags":["game"],
-        "description": "get all levels",
+        "description": "get all events for one level",
         "consumes": [
           "application/x-www-form-urlencoded"
         ],
@@ -91,7 +91,7 @@
         ]
       }
     },
-    "/game/getEventCard/{eventId}": {
+    "/game/getEventCards/{eventId}": {
       "get": {
         "tags":["game"],
         "description": "get all cards for one event",
@@ -123,7 +123,7 @@
     "/game/getCard/{cardId}": {
       "get": {
         "tags":["game"],
-        "description": "get all cards for one event",
+        "description": "get one card",
         "consumes": [
           "application/x-www-form-urlencoded"
         ],
@@ -153,6 +153,122 @@
       "get": {
         "tags":["leaderboard"],
         "description": "get all leaderboards",
+        "consumes": [
+          "application/x-www-form-urlencoded"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "UNAUTHORIZED"
+          },
+          "403": {
+            "description": "FORBIDDEN"
+          }
+        },
+        "parameters": []
+      }
+    },
+    "/leaderboard/getUserLeaderboard/{username}": {
+      "get": {
+        "tags":["leaderboard"],
+        "description": "get all leaderboards",
+        "consumes": [
+          "application/x-www-form-urlencoded"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "UNAUTHORIZED"
+          },
+          "403": {
+            "description": "FORBIDDEN"
+          }
+        },
+        "parameters": [
+          {
+            "name": "username",
+            "in": "path",
+            "description": "username",
+            "type": "string",
+            "required": true
+          }
+        ]
+      }
+    },
+    "/leaderboard/postLeaderboard": {
+      "post": {
+        "tags":["leaderboard"],
+        "description": "post new entire in Leaderboard collection",
+        "consumes": [
+          "application/json"
+        ],
+        "responses": {
+          "201": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "UNAUTHORIZED"
+          },
+          "403": {
+            "description": "FORBIDDEN"
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "leaderBoard data",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "required": [
+                "body"
+              ],
+              "properties": {
+                "username": {
+                  "type": "string"
+                },
+                "levelId": {
+                  "type": "string"
+                },
+                "score": {
+                  "type": "number"
+                }
+              }
+            }
+          }
+        ]
+      }
+    },
+    "/leaderboard/deleteLeaderboard": {
+      "delete": {
+        "tags":["internal"],
+        "description": "delete all entries in Leaderboard collection",
+        "consumes": [
+          "application/x-www-form-urlencoded"
+        ],
+        "responses": {
+          "204": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "UNAUTHORIZED"
+          },
+          "403": {
+            "description": "FORBIDDEN"
+          }
+        },
+        "parameters": []
+      }
+    },
+    "/leaderboard/getSocres": {
+      "get": {
+        "tags":["leaderboard"],
+        "description": "get a sorted list from LeaderBoard collection",
         "consumes": [
           "application/x-www-form-urlencoded"
         ],
